fix async
